--- a/packages/ui/styles/helpers/_a11y.scss
+++ b/packages/ui/styles/helpers/_a11y.scss
@@ -4,6 +4,10 @@
   box-shadow: inset 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
 }
 
+@mixin outlineAround {
+  box-shadow: 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
+}
+
 @mixin outlineFormField {
   border-color: c.$colorAccessibilityOutline;
   // Border is also colored with the a11y color. We need to make the total visible outline width c.$outlineWidth, including the border
