feat: Flexible Button variants

--- a/packages/ui/__stories__/Button.stories.module.scss
+++ b/packages/ui/__stories__/Button.stories.module.scss
@@ -6,3 +6,13 @@
   display: block;
   margin-bottom: 10px;
 }
+
+.row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+
+  & button {
+    margin-bottom: 12px;
+  }
+}
