fix: Tooltip hidden style

--- a/packages/ui/src/Tooltip.module.scss
+++ b/packages/ui/src/Tooltip.module.scss
@@ -22,6 +22,9 @@ $tooltipArrowSize2-3: c.$tooltipArrowSize / 3 * 2;
 
   &.hidden {
     visibility: hidden;
+    // important is needed to override inline style
+    top: -99999px !important;
+    left: -99999px !important;
   }
 
   > .arrow {
