--- a/packages/ui/src/Tooltip.module.scss
+++ b/packages/ui/src/Tooltip.module.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
@@ -5,8 +7,8 @@
   @include h.visuallyHidden;
 }
 
-$tooltipArrowSize1-3: c.$tooltipArrowSize / 3;
-$tooltipArrowSize2-3: c.$tooltipArrowSize / 3 * 2;
+$tooltipArrowSize1-3: math.div(c.$tooltipArrowSize, 3);
+$tooltipArrowSize2-3: math.div(c.$tooltipArrowSize, 3) * 2;
 
 .overlay {
   @include c.typographyBodySmall;
