fix: add space to title only if heading content is present

--- a/packages/ui/src/Card.module.scss
+++ b/packages/ui/src/Card.module.scss
@@ -18,7 +18,10 @@
 
     .title {
       margin: 0;
-      margin-right: c.$grid * 2.5;
+
+      &.space {
+        margin-right: c.$grid * 2.5;
+      }
     }
   }
 
