update(ui): handle dynamic min on Slider

--- a/packages/ui/src/Slider.module.scss
+++ b/packages/ui/src/Slider.module.scss
@@ -62,6 +62,7 @@ ul.markDescriptions {
     position: absolute;
     bottom: c.$grid;
     transform: translateX(-50%);
+    white-space: nowrap;
 
     &.activeMarkDescription {
       font-weight: c.$fontWeightTextBold;
