--- a/packages/ui/src/Select/SelectField.module.scss
+++ b/packages/ui/src/Select/SelectField.module.scss
@@ -36,6 +36,7 @@ $selectGroupHeading: ':global .hz-select-field__group-heading';
 
   #{$selectContainer} {
     flex: 1 1 auto;
+    overflow: hidden;
 
     @include c.typographyBodySmall;
   }
@@ -98,6 +99,7 @@ $selectGroupHeading: ':global .hz-select-field__group-heading';
     flex-direction: row;
     align-items: center;
     position: relative;
+    overflow: hidden;
 
     .iconLeftContainer {
       .iconLeft {
