feat: Display HelperText next to Label in Field-like components (TextField, Select e.t.c)

--- a/packages/ui/src/TimeField.module.scss
+++ b/packages/ui/src/TimeField.module.scss
@@ -5,12 +5,14 @@
   display: inline-flex;
   flex-direction: column;
 
-  .label {
-    margin-bottom: c.$grid;
-  }
-
   .errorContainer {
     margin-top: c.$grid;
+  }
+
+  &.small {
+    input {
+      height: c.$inputHeightSmall;
+    }
   }
 
   .inputBlock {
