--- a/packages/ui/src/Select/CheckableSelectField.module.scss
+++ b/packages/ui/src/Select/CheckableSelectField.module.scss
@@ -22,6 +22,7 @@
 }
 
 .options {
+  display: flex;
   overflow: auto;
   max-height: 300px;
   flex-direction: column;
@@ -36,6 +37,7 @@
   border: none;
   display: inline-flex;
   align-items: center;
+  text-align: left;
   font-size: c.$fontSizeBodySmall;
   color: c.$colorTextSecondary;
   outline: c.$outlineWidth solid transparent;
