update(ui): revert border radius for pagination

--- a/packages/ui/src/Pagination.module.scss
+++ b/packages/ui/src/Pagination.module.scss
@@ -40,6 +40,7 @@
       border: 1px solid;
       border-color: c.$colorNeutralLight;
       height: c.$inputHeightSmall;
+      border-radius: c.$borderRadius;
       @include c.typographyBodySmall;
 
       .body {
