update(ui): replace icons at NumberField component (#391)
* update(ui): replace icons at NumberField component

* fix(ui): use $grid variable in css

* fix(test): NumberField

--- a/packages/ui/src/NumberField.module.scss
+++ b/packages/ui/src/NumberField.module.scss
@@ -19,21 +19,33 @@ $inputMargin: c.$iconSizeSmall + $buttonMargin * 2;
 
   &.buttons {
     > input {
-      padding-left: $inputMargin;
-      padding-right: $inputMargin;
+      padding-right: $inputMargin*2;
     }
 
     .decrement {
-      position: absolute;
-      left: $buttonMargin;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-    .increment {
+      color: c.$colorPrimary;
       position: absolute;
       right: $buttonMargin;
       top: 50%;
       transform: translateY(-50%);
+      margin-right: c.$iconSizeSmallMedium+c.$grid;
+      &.decrementSmall {
+        margin-right: c.$iconSizeSmall+c.$grid;
+      }
+
+      :global line {
+        color: black;
+      }
+    }
+    .increment {
+      color: c.$colorPrimary;
+      position: absolute;
+      right: $buttonMargin;
+      top: 50%;
+      transform: translateY(-50%);
+      :global line {
+        color: black;
+      }
     }
   }
 }
