--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -26,13 +26,26 @@ $marginLeftWithIcon: c.$grid * 5;
     border-radius: c.$borderRadius;
   }
 
+  .inputIconContainer {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: $marginLeftWithIcon + $inputHorizontalPadding;
+  }
+
+  .inputTrailingIconContainer {
+    width: auto;
+    margin-right: c.$grid * 1.5;
+  }
+
+  .inputLeftIconContainer {
+    order: -1;
+  }
+
   .inputIcon,
   .inputIconTrailing {
     pointer-events: none;
-    position: absolute;
-    top: 50%;
-    // c.$grid * 9 / 2 is half of the padding. We need to shift it to the left just a bit to account for the border width
-    transform: translate(-50%, -50%) translateX(c.$outlineWidth);
   }
 
   .inputIcon {
@@ -85,19 +98,17 @@ $marginLeftWithIcon: c.$grid * 5;
     &::placeholder {
       color: c.$colorTextSecondary;
     }
+  }
 
-    &.trailingIcon {
-      padding-right: c.$grid * 8;
-    }
+  .clearButton {
+    display: inline-flex;
+    align-items: center;
+    margin-right: c.$grid * 1.5;
   }
 
   &.small {
     .inputContainer {
       height: c.$inputHeightSmall;
-    }
-
-    .inputIconTrailing {
-      right: 0;
     }
   }
 
@@ -110,9 +121,6 @@ $marginLeftWithIcon: c.$grid * 5;
   &.withIcon {
     input {
       padding-left: 0;
-      // Chrome fills the input (including paddings) with its custom override color on autofill.
-      // If we leave the padding in place it fills a part fo the background for the icon.
-      margin-left: $marginLeftWithIcon + $inputHorizontalPadding;
     }
   }
 
