--- a/packages/ui/src/Select/CheckableSelectField.module.scss
+++ b/packages/ui/src/Select/CheckableSelectField.module.scss
@@ -38,6 +38,7 @@
   display: inline-flex;
   align-items: center;
   text-align: left;
+  flex-shrink: 0;
   font-size: c.$fontSizeBodySmall;
   color: c.$colorTextSecondary;
   outline: c.$outlineWidth solid transparent;
