fix(ui): error container margin

--- a/packages/ui/styles/helpers/_error.scss
+++ b/packages/ui/styles/helpers/_error.scss
@@ -3,7 +3,7 @@
 @mixin withError {
   .withError {
     position: relative;
-    padding-bottom: c.$errorHeight;
+    padding-bottom: c.$errorHeight+c.$grid;
 
     .errorContainer {
       position: absolute;
